# dartfrog

./: .gitignore  CMakeLists.txt  README.md  insert.txt  remove.txt
benchmarks/: crdt.dl  crdt_benchmark.cpp  doop.dl  doop_benchmark.cpp  galen.dl  galen_benchmark.cpp  tc_benchmark.cpp
benchmarks/utilities/: interner.hh
headers/: dartfrog.hpp  datalog.hpp  datatoad.hpp  iteration.hpp  join.hpp  leapers.hpp  map.hpp  query.hpp  relation.hpp  treefrog.hpp  variable.hpp
headers/dartfrog/: iteration.hpp  join.hpp  leapers.hpp  relation.hpp  variable.hpp
headers/datalog/: lftj.hpp  predicate.hpp  query_planner.hpp  var.hpp  wcoj.hpp
headers/datatoad/: iteration.hpp  join.hpp  leapers.hpp  relation.hpp  variable.hpp
headers/dsl/: predicate.hpp  var.hpp  wcoj.hpp
scripts/: gen_all_partitions_tests.py
src/: basic_tests.cpp  crdt_benchmark.cpp  dsl_basic_tests.cpp  extends_tests.cpp  filter_tests.cpp  gallop_tests.cpp  iteration_tests.cpp  join_tests.cpp  leapjoin_tests.cpp  merge_unique_tests.cpp  query_tests.cpp  relation_tests.cpp  seek_tests.cpp  tc_benchmark.cpp  usage_tests.cpp  variable_tests.cpp
tests/: all_partitions_tests.cpp  dsl_basic_tests.cpp  dsl_planner_tests.cpp  leapjoin_tests.cpp  merge_unique_tests.cpp  variable_tests.cpp
